# 3DX

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  architecture.txt  build.ninja  cmake_install.cmake  compile_commands.json  docs_engine_game_architecture_Version2.md  docs_engine_with_networking_architecture_Version2.md  ecs_integration_plan_Version2.md  main.cpp
.cache/clangd/index/: main.cpp.0B37DE38FBEB5EA0.idx  renderer.cpp.44F05F7D8666E651.idx  renderer.h.E06C0AADA730424B.idx
assets/textures/: 5262771.ai
core/: CMakeLists.txt  cmake_install.cmake
core/game/: game.cpp  game.h
core/renderer/: renderer.cpp  renderer.h
core/resource/: resource.h
engine/: CMakeLists.txt  engine.cpp  engine.h
engine/core/assert/: assert.h
engine/core/ecs/: component.h  entity.h
engine/core/renderer/: renderer.cpp  renderer.h
engine/ecs/: components.h  entity.h
engine/ecs/systems/: render.system.h
engine/resources/: resource.cpp
game/: CMakeLists.txt  game.cpp  game.h
